# ccbar

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README_CN.md  package-lock.json  package.json  pyproject.toml
.claude-plugin/: marketplace.dev.json  marketplace.json  plugin.json
ccbar/: __init__.py  main.py
commands/: configure.md  doctor.md  setup.md
docs/: marketplace-submission.md
docs/plans/: 2026-03-19-ccbar-plugin-design.md  2026-03-19-ccbar-plugin-implementation-plan.md  2026-03-20-plugin-marketplace-release-plan.md  2026-03-23-public-github-marketplace-design.md  2026-03-23-public-github-marketplace-implementation-plan.md  2026-03-23-python-debug-wrapper-design.md  2026-03-23-python-debug-wrapper-implementation-plan.md
hooks/: hooks.json
src/: cli.ts  config.ts  install.ts  pricing.ts  quota.ts  statusline.ts  transcript.ts
src/ccbar/: __init__.py  main.py
tests/: cli-entry.test.mjs  hooks.test.mjs  install.test.mjs  plugin-scaffold.test.mjs  pricing.test.mjs  quota.test.mjs  repo-shape.test.mjs  statusline.test.mjs  test_cost_stats.py  test_python_debug_wrapper.py  transcript.test.mjs
