[project]
name = "ccbar"
version = "0.1.2"
description = "Accurate cost tracking and quota monitoring for Claude Code"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
dependencies = []
keywords = ["claude", "claude-code", "statusline", "token-tracking", "cost-tracking"]
authors = [
    { name = "majunxian" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/Narcooo/ccbar"
Repository = "https://github.com/Narcooo/ccbar"
Issues = "https://github.com/Narcooo/ccbar/issues"

[project.scripts]
ccbar = "ccbar.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
